Implementado o GetById para as pessoas
